# authsome

./: .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .trivyignore  MIGRATION_STRATEGY.md  Makefile  QUICK_START_CLIENT_GENERATOR.md  README.md  ROUTING_ARCHITECTURE.md  SECURITY.md  authsome-dev.yaml  authsome-proper.yaml  authsome-schema.json  authsome-standalone.yaml  authsome.go  authsome_test.go  bootstrap.go  bootstrap_test.go  captcha_settings.go  config.go  container.go  cookie.go  cookie_test.go  cross_pk_session_test.go  debug_routes_test.go  e2e_multi_auth_test.go  e2e_test.go  engine.go  engine_issue_session.go  engine_issue_session_test.go  engine_test.go  exports.go  go.mod  go.sum  id.go  llm.txt  option.go  options.go  (+14 more)
.claude/: settings.local.json
.github/: SECURITY_QUICK_REFERENCE.md  dependabot.yml  release-drafter.yml
account/: account.go  argon2.go  breach.go  otp_test.go  password_history.go  password_history_memory.go  service.go  service_test.go  store.go
api/: admin_handlers.go  api.go  api_test.go  (+21 more)
clients/rust/: Cargo.toml
clients/rust/src/: client.rs  error.rs  lib.rs  plugin.rs  types.rs
clients/rust/src/plugins/: admin.rs  anonymous.rs  apikey.rs  backupauth.rs  cms.rs  compliance.rs  consent.rs  emailotp.rs  emailverification.rs  idverification.rs  impersonation.rs  jwt.rs  magiclink.rs  mfa.rs  mod.rs  multiapp.rs  multisession.rs  notification.rs  oidcprovider.rs  organization.rs  passkey.rs  permissions.rs  phone.rs  secrets.rs  social.rs  sso.rs  stepup.rs  twofa.rs  username.rs  webhook.rs
(+2700 files in other folders)
