[package]
name = "authsome-client"
version = "1.0.0"
edition = "2021"
description = "Rust client for AuthSome authentication"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
url = "2.4"

[dev-dependencies]
tokio-test = "0.4"
